# RandomFactsQuiz

./: README.md  alembic.ini  backend_openAPI_documentation.yaml  linting_testing_vulnerability_checking.yml  pyproject.toml  quiz.json
.github/workflows/: linting_testing_vulnerability_checking.yml
random_quiz/: __init__.py  __main__.py  streamlit_front.py
random_quiz/config/: default.py  utils.py
random_quiz/db/: __init__.py
random_quiz/db/connection/: session.py
random_quiz/db/migrator/: env.py
random_quiz/db/migrator/versions/: 2024-04-29_d35512dcf37c_.py  2024-04-30_2e88b04c7a80_.py
random_quiz/db/models/: __init__.py  base.py  questions.py  quiz.py
random_quiz/endpoints/: __init__.py  auth.py  ping.py  quiz.py
random_quiz/schemas/: __init__.py
random_quiz/schemas/auth/: registration.py
random_quiz/schemas/quiz/: question.py  quiz.py
random_quiz/utils/: get_question.py
random_quiz/utils/quiz/: business_logic.py  databse.py
random_quiz/utils/user/: __init__.py  business_logic.py  database.py
tests/: conftest.py  utils.py
tests/test_endpoints/: test_auth.py  test_health_check.py
tests/test_endpoints/utils/: get_url_service.py
tests/test_migrations/: test_stairway.py
