[tool.poetry]
name = "randomfactsquiz"
version = "0.1.0"
description = ""
authors = ["Minus One <LAnnaIg03@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"
requests = "^2.31.0"
jinja2 = "^3.0.0"
streamlit = "^1.33.0"
sqlalchemy = "^2.0.29"
SQLAlchemy-Utils = "^0.41.1"
alembic = "^1.13.1"
passlib = "^1.7.4"
fastapi-pagination = "^0.12.4"
pydantic = { extras = ["dotenv", "email"], version = "^1.9.1" }
psycopg2-binary = "^2.9.3"
python-jose = "^3.3.0"
asyncpg = "^0.29.0"
bcrypt = "^4.0.1"
pytest = "^7.1.2"
pytest-aiohttp = "^1.0.4"
pytest-cov = "^3.0.0"
configargparse = "^1.7"
httpx = "^0.23.0"
mock = "^4.0.3"
flake8 = '^7.0.0'
bandit = '^1.7.0'

[tool.pytest]
python_files = "test_*.py"
python_classes = ["*Test", "Test*"]
python_functions = "test_*"
testpaths = "tests/"


[tool.coverage.html]
directory = "pytest-cov-report"


[tool.pytest.ini_options]
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
